# gloom

./: .clang-format  CMakeLists.txt  README.md
cmake/: ClangFormat.cmake  Libraries.cmake
core/: core_types.cpp  gloom_image.cpp  gloom_tools.cpp  image.cpp  tools.cpp
core/include/: core_assert.h  core_macros.h  core_types.h  gloom_assert.h  gloom_image.h  gloom_macros.h  image.h  tools.h
documentation/: uniform.md
examples/: CMakeLists.txt
examples/compute_raytracing/: compute_raytracing.cpp
examples/example/: example.cpp
examples/example_1/: example_1.cpp
examples/example_2/: example_2.cpp
examples/example_3/: example_3.cpp
examples/example_4/: example_4.cpp
examples/isometric/: isometric.cpp
examples/khronos_viewer/: khronos_viewer.cpp
examples/learn_opengl_camera/: learn_opengl_camera.cpp
examples/learn_opengl_texture/: learn_opengl_texture.cpp
examples/primitives/: primitives.cpp
examples/raymarching/: raymarching.cpp
examples/separated_buffers/: separated_buffers.cpp
examples/skybox/: skybox.cpp
examples/terrain/: terrain.cpp
examples/texture/: texture.cpp
examples/triangle/: triangle.cpp
examples/viewer/: viewer.cpp
examples/wavefront_viewer/: wavefront_viewer.cpp
gloom/: CMakeLists.txt  application.cpp  buffer.cpp  framebuffer.cpp  gloom_commands.cpp  gloom_debug.cpp  gloom_types.cpp  graphics_pipeline.cpp  graphics_types.cpp  renderbuffer.cpp  shader.cpp  shader_pipeline.cpp  texture.cpp  vertex_array.cpp  vertex_format.cpp
gloom/application/: application.cpp
gloom/application/include/: application.h  gloom.h  layer.h
gloom/core/: cubemap.cpp  image.cpp  tools.cpp
gloom/core/include/: concepts.h  core_assert.h  core_types.h  cubemap.h  image.h  macros.h  tools.h
gloom/graphics/: debug.cpp  graphics_command.cpp  graphics_types.cpp
gloom/graphics/buffer/: buffer.cpp  buffer.h  buffer.ipp  buffers.h  index_buffer.h  vertex_buffer.h
gloom/graphics/include/: debug.h  graphics.h  graphics_command.h  graphics_types.def  graphics_types.h
gloom/graphics/pipeline/: compute_pipeline.cpp  compute_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  pipeline.ipp  shader_uniform.h
gloom/graphics/texture/: framebuffer.cpp  framebuffer.h  renderbuffer.cpp  renderbuffer.h  sampler.cpp  sampler.h  texture.cpp  texture.h  texture_2d.cpp  texture_2d.h  texture_cubemap.h
gloom/graphics/vertex/: vertex_array.cpp  vertex_array.h  vertex_attribute.h  vertex_format.cpp  vertex_format.h
gloom/gui/: key.cpp  window.cpp  window_callback.cpp
gloom/gui/imgui/: imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp  imgui_renderer.h
gloom/gui/include/: event.h  key.def  key.h  window.h
gloom/include/: application.h
gloom/mathematics/: bounding_box.cpp  bvh.cpp  triangle.cpp
gloom/mathematics/include/: bounding_box.h  bvh.h  ray.h  triangle.h
gloom/mesh/: assimp_loader.cpp  model.cpp  primitives.cpp  terrain.cpp  transform.cpp  wavefront_loader.cpp
gloom/mesh/include/: material.h  model.h  primitives.h  terrain.h  transform.h  vertex.h
gloom/renderer/: model_renderer.cpp  primitive_renderer.cpp  renderer.cpp  shader_library.cpp
gloom/renderer/include/: model_renderer.h  primitive_renderer.h  renderer.h  shader_library.def  shader_library.h
gloom/scene/: camera.cpp  orthographic_camera.cpp  perspective_camera.cpp
gloom/scene/include/: camera.h  light.h  orthographic_camera.h  perspective_camera.h
gloom/widgets/: camera_widget.cpp  editor_widget.cpp  light_widget.cpp  transform_widget.cpp
gloom/widgets/include/: camera_widget.h  editor_widget.h  light_widget.h  transform_widget.h
gloom_core/: core_types.cpp  cubemap.cpp  image.cpp  tools.cpp
gloom_core/include/: core_assert.h  core_macros.h  core_types.h  cubemap.h  image.h  tools.h
gloom_layer/include/: gloom_layer.h
gloom_mathematics/: bounding_box.cpp  triangle.cpp
gloom_mathematics/include/: bounding_box.h  bvh.h  ray.h  triangle.h
gloom_mesh/: gloom_mesh.cpp  gloom_mesh_loader.cpp  gloom_mesh_tools.cpp  gloom_model_loader.cpp  gloom_primitives.cpp  khronos_loader.cpp  mesh.cpp  mesh_loader.cpp  primitives.cpp  terrain.cpp  transform.cpp  wavefront_loader.cpp
gloom_mesh/include/: gloom_mesh.h  gloom_mesh_loader.h  gloom_mesh_tools.h  gloom_model.h  gloom_model_loader.h  gloom_primitives.h  gloom_vertex.h  mesh.h  mesh_loader.h  primitives.h  terrain.h  transform.h
gloom_renderer/: gloom_renderer.cpp
gloom_renderer/include/: gloom_renderer.h
gloom_scene/: gloom_camera.cpp  gloom_material.cpp  material.cpp
gloom_scene/include/: camera.h  gloom_camera.h  gloom_light.h  gloom_material.h
gloom_shaders/: gloom_2d.vert  gloom_simple.frag  gloom_simple.vert
gloom_tools/: gloom_image.cpp  gloom_tools.cpp
gloom_tools/include/: gloom_assert.h  gloom_image.h  gloom_literals.h  gloom_macros.h  gloom_tools.h
gloom_widgets/: camera_widget.cpp  light_widget.cpp  transform_widget.cpp
gloom_widgets/include/: camera_widget.h  light_widget.h  transform_widget.h
graphics/: commands.cpp  debug.cpp  graphics_types.cpp
graphics/buffer/: buffer.cpp  buffer.h  vertex_buffer.h
graphics/compute_pipeline/: compute_pipeline.cpp  compute_pipeline.h
gui/: GLFW_window.cpp  GLFW_window_callback.cpp  SDL_window.cpp  SDL_window_callback.cpp  window.cpp  window_callback.cpp
include/: buffer.h  framebuffer.h  gloom.h  gloom_commands.h  gloom_debug.h  gloom_types.def  gloom_types.h  graphics_pipeline.h  graphics_types.h  renderbuffer.h  shader.h  shader_information.h  shader_pipeline.h  shader_uniform.h  texture.h  vertex_array.h  vertex_attribute.h  vertex_buffer.h  vertex_format.h
mesh/: gloom_mesh_tools.cpp  mesh.cpp  mesh_loader.cpp  mesh_tools.cpp  primitives.cpp
renderer/: direct_renderer.cpp  renderer.cpp
scene/: camera.cpp  material.cpp
shaders/: blinn_phong.frag  blinn_phong_indirect.frag  blinn_phong_indirect_bindless.frag  canvas.frag  canvas.vert  color_phong.frag  gloom_2d.frag  gloom_2d.vert  gui.vert  instance_pnt.vert  pbr.frag  position3_texture2.frag  position3_texture2.vert  ray.frag  texture_pbr.frag  vertex_pnt.vert
(+73 files in other folders)
